--- a/src/scss/theme.css
+++ b/src/scss/theme.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+html, body, #root {
+  height: 100%;
+}
+
 ul.spaced > li,
 ol.spaced > li {
   margin-bottom: 0.85em;
