--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -2,6 +2,10 @@
 // @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
+html, body, #root {
+  height: 100%
+}
+
 // $font-family-base: "Noto Sans Display", Arial, sans-serif;
 // $font-family-base: "Outfit", Arial, sans-serif;
 $font-family-base: "Open Sans", Arial, sans-serif;
